@@ -1,0 +1,4 @@
+package swarm;
+
+public class SignatureNotFoundException extends Exception {
+}
